--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>jdk8tests</groupId>
+    <groupId>jdk8</groupId>
     <artifactId>jdk8-tests</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>jdk8-tests</name>
+    <name>JDK 8 - Tests</name>
     <url>http://maven.apache.org</url>
+    <scm>
+        <connection>https://github.com/Janario/jdk8-tests.git</connection>
+        <developerConnection>https://github.com/Janario/jdk8-tests.git</developerConnection>
+        <url>https://github.com/Janario/jdk8-tests</url>
+    </scm>
     <build>
         <plugins>
             <plugin>
@@ -19,6 +24,7 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <compilerArgument>-Xlint:all,-serial</compilerArgument>
+                    <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
         </plugins>
@@ -31,7 +37,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.10</version>
             <scope>test</scope>
         </dependency>
         
