--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.1</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.google.caliper</groupId>
+            <artifactId>caliper</artifactId>
+            <version>1.0-beta-1</version>
+        </dependency>
     </dependencies>
 </project>
